Correções nas operações CRUD da gestão do usuário!
